# rag-demo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  start.bat  start.sh
src/: app.py  config.py  document_processor.py  logging_config.py  rag_pipeline.py  vector_store.py
tests/: test_comprehensive.py  test_rag_app.py
